Update: - include how to run Spark on HowToRun.md